Updated default binary name

--- a/openocd-0.10.0/tcl/board/rs14100.cfg
+++ b/openocd-0.10.0/tcl/board/rs14100.cfg
@@ -21,7 +21,7 @@ poll
 
 flash probe 0 
 
-flash write_image erase "RS14100.bin" 0x08012000 bin
+flash write_image erase "wisemcu.bin" 0x08012000 bin
 
 sleep 10
 
